chore: finalize code